옵저버 패턴 작업중